--- a/files/css/light.css
+++ b/files/css/light.css
@@ -13,7 +13,7 @@ body{
 .logo,h1,h2,h3,h4{
     color: #242F65;
 }
-p{
+p,li,ul,pre{
     color: #767B92;
 }
 
